[package]
name = "endless-aggregator"
description = "Aggregator sources for the Endless blockchain"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
endless-logger = { workspace = true }
endless-types = { workspace = true }
bcs = { workspace = true }
claims = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
test-case = { workspace = true }

[features]
default = []
testing = []
