[package]
name = "endless-api-types"
description = "Endless API Types"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
endless-crypto = { workspace = true }
endless-framework = { workspace = true }
endless-logger = { workspace = true }
endless-openapi = { workspace = true }
endless-types = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
