[package]
name = "endless-gas-schedule"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
endless-gas-algebra = { workspace = true }
endless-global-constants = { workspace = true }
endless-types = { workspace = true }
either = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }

[features]
testing = ["endless-global-constants/testing"]
