[package]
description = "Endless Indexer Client"
name = "endless-indexer-client"
version = "0.0.0"

# Workspace inherited keys
authors = {workspace = true}
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
publish = {workspace = true}
repository = {workspace = true}
rust-version = {workspace = true}

[features]

[dependencies]
anyhow = {workspace = true}
endless-types = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
url = {workspace = true}

[dev-dependencies]
