[package]
name = "endless-ledger"
description = "Library for integration with the Endless app on Ledger"
version = "0.2.0"
publish = true

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = "https://github.com/endless-labs/endless-core/tree/main/crates/endless-ledger"
rust-version = { workspace = true }

[dependencies]
endless-crypto = { workspace = true }
endless-types = { workspace = true }
hex = { workspace = true }
ledger-apdu = "0.10.0"
ledger-transport-hid = "0.10.0"
once_cell = { workspace = true }
thiserror = { workspace = true }
