[package]
name = "endless-native-interface"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
endless-gas-algebra = { workspace = true }
endless-gas-schedule = { workspace = true }
endless-types = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
smallvec = { workspace = true }
