[package]
name = "endless-sdk-builder"
description = "Endless transaction-builder"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
endless-types = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
heck = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde-generate = { workspace = true }
serde-reflection = { workspace = true }
serde_yaml = { workspace = true }
textwrap = { workspace = true }

[dev-dependencies]
endless-cached-packages = { workspace = true }
endless-framework = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
