[package]
name = "endless-table-natives"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
endless-gas-schedule = { workspace = true } 
endless-native-interface = { workspace = true }
better_any = { workspace = true }
bytes = { workspace = true }
sha3 = { workspace = true }
smallvec = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-table-extension = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-vm-types = { workspace = true }

endless-types = { workspace = true }
